--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
